# wallet/handler.go
@@ -16,6 +16,7 @@ type Storer interface {
 	WalletByUserID(id int) ([]Wallet, error)
 	CreateWallet(wallet Wallet) error
 	UpdateWallet(id int, wallet Wallet) error
+	DeleteWallet(id int) error
 }
 
 func New(db Storer) *Handler {
@@ -36,6 +37,7 @@ type Err struct {
 //	@Success		200	{object}	Wallet
 //	@Router			/api/v1/wallets [get]
 //	@Failure		500	{object}	Err
+//	@Router /api/v1/wallets [get]
 func (h *Handler) GetAllWalletsHandler(c echo.Context) error {
 	walletType := c.QueryParam("wallet_type")
 	wallets, err := h.store.Wallets(walletType)
@@ -49,12 +51,13 @@ func (h *Handler) GetAllWalletsHandler(c echo.Context) error {
 //
 //	@Summary		Get wallet by user id
 //	@Description	Get wallet by user id
-//	@Tags			wallet
+//	@Tags			users
 //	@Accept			json
 //	@Produce		json
 //	@Success		200	{object}	Wallet
-//	@Router			/api/v1/wallets [get]
+//	@Router			/api/v1/users/:id/wallets [get]
 //	@Failure		500	{object}	Err
+//	@Router /api/v1/users/:id/wallets [get]
 func (h *Handler) GetWalletByIDHandler(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -67,6 +70,17 @@ func (h *Handler) GetWalletByIDHandler(c echo.Context) error {
 	return c.JSON(http.StatusOK, wallets)
 }
 
+// CreateWalletHandler
+//
+//	@Summary		Create wallet
+//	@Description	Create wallet
+//	@Tags			wallet
+//	@Accept			json
+//	@Produce		json
+//	@Success		201	{object}	Wallet
+//	@Router			/api/v1/wallets [post]
+//	@Failure		500	{object}	Err
+//	@Router /api/v1/wallets [post]
 func (h *Handler) CreateWalletHandler(c echo.Context) error {
 	var wallet Wallet
 	if err := c.Bind(&wallet); err != nil {
@@ -79,6 +93,17 @@ func (h *Handler) CreateWalletHandler(c echo.Context) error {
 	return c.JSON(http.StatusCreated, wallet)
 }
 
+// UpdateWalletHandler
+//
+//	@Summary		Update wallet by id
+//	@Description	Update wallet by id
+//	@Tags			wallet
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	Wallet
+//	@Router			/api/v1/wallets/:id [put]
+//	@Failure		500	{object}	Err
+//	@Router /api/v1/wallets/:id [put]
 func (h *Handler) UpdateWalletHandler(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -93,4 +118,27 @@ func (h *Handler) UpdateWalletHandler(c echo.Context) error {
 		return c.JSON(http.StatusInternalServerError, Err{Message: err.Error()})
 	}
 	return c.JSON(http.StatusOK, wallet)
+}
+
+// DeleteWalletByIDHandler
+//
+//	@Summary		Delete wallet by user_id
+//	@Description	Delete wallet by user_id
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Success		204	{object}	Wallet
+//	@Router			/api/v1/users/:id/wallets [delete]
+//	@Failure		500	{object}	Err
+//	@Router /api/v1/users/:id/wallets [delete]
+func (h *Handler) DeleteWalletByIDHandler(c echo.Context) error {
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, Err{Message: err.Error()})
+	}
+	err = h.store.DeleteWallet(id)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, Err{Message: err.Error()})
+	}
+	return c.JSON(http.StatusNoContent, nil)
 }
